--- a/material-popup-menu/src/main/res/values/styles.xml
+++ b/material-popup-menu/src/main/res/values/styles.xml
@@ -30,4 +30,8 @@
         <item name="android:background">?attr/listChoiceBackgroundIndicator</item>
     </style>
 
+    <style name="Widget.MPM.Menu.Animation">
+        <item name="android:windowEnterAnimation">@null</item>
+        <item name="android:windowExitAnimation">@null</item>
+    </style>
 </resources>
